--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -48,19 +48,19 @@ dependencies:
   - lcms2=2.17=hbcf6048_0
   - lerc=4.0.0=h63175ca_0
   - libaec=1.1.3=h63175ca_0
-  - libblas=3.9.0=30_h576b46c_mkl
+  - libblas=3.9.0=31_h641d27c_mkl
   - libbrotlicommon=1.1.0=h2466b09_2
   - libbrotlidec=1.1.0=h2466b09_2
   - libbrotlienc=1.1.0=h2466b09_2
-  - libcblas=3.9.0=30_h7ad3364_mkl
+  - libcblas=3.9.0=31_h5e41251_mkl
   - libcurl=8.12.1=h88aaa65_0
   - libdeflate=1.23=h9062f6e_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libffi=3.4.6=h537db12_0
   - libhwloc=2.11.1=default_h8125262_1000
-  - libiconv=1.17=hcfcfb64_2
+  - libiconv=1.18=h135ad9c_1
   - libjpeg-turbo=3.0.0=hcfcfb64_1
-  - liblapack=3.9.0=30_hacfb0e4_mkl
+  - liblapack=3.9.0=31_h1aa476e_mkl
   - liblzma=5.6.4=h2466b09_0
   - libpng=1.6.47=had7236b_0
   - libsqlite=3.49.1=h67fdade_1
@@ -68,7 +68,7 @@ dependencies:
   - libtiff=4.7.0=h797046b_3
   - libwebp-base=1.5.0=h3b0e114_0
   - libxcb=1.16=h013a479_1
-  - libxml2=2.13.5=he286e8c_1
+  - libxml2=2.13.6=he286e8c_0
   - libzlib=1.3.1=h2466b09_2
   - llvm-openmp=19.1.7=h30eaf37_0
   - llvmlite=0.44.0=py310h0288bfe_0
@@ -148,7 +148,7 @@ dependencies:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@4d829b7b8759d7537a8184aa506548ddccf72041
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99300455d1d5627d8a2e95a7217da2bab4921f48
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@77e2a29a990686274b1901c4d2aacb258a5689a0
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@9d8f676abaef4ad28613fc37d8a9081ece6ae43a
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@171c86d5648d4d8636692b97b3a72296b9d3b262
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@39de1da1495aff6d16641d408317619e23adbdb4
 
 variables:
