--- a/environments/py-3.11-linux-64.conda.lock.yml
+++ b/environments/py-3.11-linux-64.conda.lock.yml
@@ -51,14 +51,14 @@ dependencies:
   - kiwisolver=1.4.7=py311hd18a35c_0
   - krb5=1.21.3=h659f571_0
   - lcms2=2.17=h717163a_0
-  - ld_impl_linux-64=2.43=h712a8e2_2
+  - ld_impl_linux-64=2.43=h712a8e2_4
   - lerc=4.0.0=h27087fc_0
   - libaec=1.1.3=h59595ed_0
-  - libblas=3.9.0=30_h2556b6b_mkl
+  - libblas=3.9.0=31_hfdb39a5_mkl
   - libbrotlicommon=1.1.0=hb9d3cd8_2
   - libbrotlidec=1.1.0=hb9d3cd8_2
   - libbrotlienc=1.1.0=hb9d3cd8_2
-  - libcblas=3.9.0=30_h372d94f_mkl
+  - libcblas=3.9.0=31_h372d94f_mkl
   - libcurl=8.12.1=h332b0f4_0
   - libdeflate=1.23=h4ddbbb0_0
   - libdlf=0.3.0=pyhd8ed1ab_1
@@ -71,9 +71,9 @@ dependencies:
   - libgfortran=14.2.0=h69a702a_1
   - libgfortran5=14.2.0=hd5240d6_1
   - libhwloc=2.11.1=default_hecaa2ac_1000
-  - libiconv=1.18=h4ce23a2_0
+  - libiconv=1.18=h4ce23a2_1
   - libjpeg-turbo=3.0.0=hd590300_1
-  - liblapack=3.9.0=30_hc41d3b0_mkl
+  - liblapack=3.9.0=31_hc41d3b0_mkl
   - libllvm15=15.0.7=ha7bfdaf_5
   - liblzma=5.6.4=hb9d3cd8_0
   - libnghttp2=1.64.0=h161d5f1_0
@@ -162,7 +162,7 @@ dependencies:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@4d829b7b8759d7537a8184aa506548ddccf72041
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99300455d1d5627d8a2e95a7217da2bab4921f48
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@77e2a29a990686274b1901c4d2aacb258a5689a0
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@9d8f676abaef4ad28613fc37d8a9081ece6ae43a
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@171c86d5648d4d8636692b97b3a72296b9d3b262
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@39de1da1495aff6d16641d408317619e23adbdb4
 
 variables:
