--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ fsspec = "2022.*"  # from simpeg[dask]
 geoana = ">=0.5.0, <0.6.dev"  # from simpeg
 h5py = ">=3.2.1, <4.0.dev"  # from geoh5py
 matplotlib-base = ">=3.8.4, <3.9.dev"  # from simpeg
+mkl = "2023.2, <2024.1"
 pandas = ">=2.2.1, <2.3.dev"  # from SimPEG, also used by targeting-workflow, petro-lingo
 Pillow = ">=10.3.0, <10.4.dev"  # from geoh5py
 pydantic = ">=2.5.2, <3.0.dev"  # from geoh5py, geoapps-utils
