--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,13 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10, <3.12"  # geoana does not support 3.12 yet
+python = "^3.10"
 
 dask = {version = "2024.6.*", extras = ["distributed"]}  # also in simpeg[dask]
 discretize = "0.11.*"  # also in simpeg, octree-creation-app
 distributed = "2024.6.*"  # because conda-lock doesn't take dask extras into account
 numpy = "~1.26.0" # also in geoh5py, simpeg
+scikit-learn = "~1.4.0"
 scipy = "~1.14.0"
 
 # solvers for simpeg: not imported, but at least one required at runtime
@@ -43,19 +44,19 @@ python-mumps = ">=0.0.3, <0.0.4.dev"
 
 ## Pip dependencies from Git repositories
 #----------------------------------------
-#geoh5py = {version = ">=0.10.1, <0.11.dev", source = "pypi", allow-prereleases = true}
+#geoh5py = {version = ">=0.11.0a, <0.12.dev", source = "pypi", allow-prereleases = true}
 geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "develop"}
 
-#octree-creation-app = {version = ">=0.2.0, <0.3.dev", source = "pypi", allow-prereleases = true}
+#octree-creation-app = {version = ">=0.3.0a, <0.4.dev", source = "pypi", allow-prereleases = true}
 octree-creation-app = {git = "https://github.com/MiraGeoscience/octree-creation-app.git", rev = "develop"}
 
-#geoapps-utils = {version = ">=0.4.0, <0.5.dev", source = "pypi", allow-prereleases = true}
+#geoapps-utils = {version = ">=0.5.0a, <0.6.dev", source = "pypi", allow-prereleases = true}
 geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "develop"}
 
-#mira-simpeg = {version = ">=0.21.2.2a1, <0.21.3.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
+#mira-simpeg = {version = ">=0.23.0.1.a, <0.23.1.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
 mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "develop", extras = ["dask"]}
 
-#param-sweeps = {version = ">=0.2.0, <0.3.dev", source = "pypi", allow-prereleases = true}
+#param-sweeps = {version = ">=0.3.0, <0.4.dev", source = "pypi", allow-prereleases = true}
 param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "develop"}
 
 ## about pip dependencies
@@ -93,25 +94,21 @@ libblas = "*=*mkl"  # because simpeg already brings in the MKL
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
-empymod = ">=2.2.1, <2.3.dev"  # from simpeg and geoana
 bokeh = ">=3.6.0, <3.7.0"  # from simpeg
 fsspec = "2022.*"  # from simpeg[dask]
-geoana = ">=0.5.0, <0.6.dev"  # from simpeg
+geoana = ">=0.7.0, <0.8.dev"  # from simpeg
 h5py = ">=3.2.1, <4.0.dev"  # from geoh5py
 matplotlib-base = ">=3.8.4, <3.9.dev"  # from simpeg
 mkl = "2023.2, <2024.1"
-pandas = ">=2.2.1, <2.3.dev"  # from SimPEG, also used by targeting-workflow, petro-lingo
 Pillow = ">=10.3.0, <10.4.dev"  # from geoh5py
 pydantic = ">=2.5.2, <3.0.dev"  # from geoh5py, geoapps-utils
 pymatsolver = ">=0.3.0, <0.4.dev"  # from simpeg
-scikit-learn = ">=1.4.0, <1.5.dev"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
 tqdm = ">=4.66.1, <5.0.dev"  # from simpeg
 zarr = ">=2.14.2, <2.15.dev"  # from simpeg[dask]
 
 # force some versions to resolve incompatible resolution between PyPI and Conda
 #------------------------------------------------------------------------------
 tbb = "2021.12.*"  # through mkl from SimPEG
-python-tzdata = "2023.4.*"  # through pandas from SimPEG
 
 [tool.ruff]
 target-version = "py310"
