--- a/recipe.yaml
+++ b/recipe.yaml
@@ -26,32 +26,29 @@ requirements:
   run:
     - python >=${{ python_min }}
     # Mira packages
-    - geoapps-utils >=0.5.0a1, <0.6.dev
-    - geoh5py >=0.11.0a1, <0.12.dev
-    - octree-creation-app >=0.3.0a1, <0.4.dev
-    - mira-simpeg >=0.21.2.3a1, <0.21.4.dev
+    - geoapps-utils >=0.5.0a, <0.6.dev
+    - geoh5py >=0.11.0a, <0.12.dev
+    - octree-creation-app >=0.3.0a, <0.4.dev
+    - mira-simpeg >=0.23.0.1a, <0.23.1.dev
     - param-sweeps >=0.3.0a1, <0.4.dev
     # direct dependencies
     - dask-core >=2024.06, <2024.07.dev
     - discretize >=0.10.0, <0.11.dev
     - distributed >=2024.06, <2024.07.dev
     - numpy >=1.26.0, <1.27.dev
+    - scikit-learn >=1.4.0, <1.5.dev
     - scipy >=1.14.0, <1.15.dev
     - pydiso >=0.1.0, <0.2.dev
     - python-mumps >=0.0.3, <0.0.4.dev
-    # indirect dependencies
-    - empymod >=2.2.1, <2.3.dev
-    - fsspec >=2022.0, <2023.0.dev
-    - geoana >=0.5.0, <0.6.dev
+    # constraint version for some indirect dependencies from SimPEG
+    - geoana >=0.7.0, <0.8.dev
     - matplotlib-base >=3.8.4, <3.9.dev
-    - pandas >=2.2.1, <2.3.dev
     - pymatsolver >=0.3.0, <0.4.dev
-    - scikit-learn >=1.4.0, <1.5.dev
     - tqdm >=4.66.1, <5.0.dev
     - zarr >=2.14.2, <2.15.dev
   run_constraints:
     - __glibc >=2.17
-    - python-tzdata >=2023.4.0, <2023.5.dev
+    - fsspec >=2022.0, <2023.0.dev
     - tbb >=2021.12.0, <2021.13.dev
 
 about:
@@ -61,5 +58,6 @@ about:
 
 extra:
   recipe-maintainers:
+    - domfournier
     - andrewg-mira
     - sebhmg
