--- a/.github/workflows/python_analysis.yml
+++ b/.github/workflows/python_analysis.yml
@@ -34,7 +34,7 @@ jobs:
     uses: MiraGeoscience/CI-tools/.github/workflows/reusable-python-pytest.yml@main
     with:
       package-manager: 'conda'
-      python-versions: '["3.10", "3.11"]'
+      python-versions: '["3.10", "3.11", "3.12"]'
       os: '["ubuntu-latest", "windows-latest"]'
       cache-number: 1
       codecov-reference-python-version: '3.10'
