--- a/.github/workflows/python_analysis.yml
+++ b/.github/workflows/python_analysis.yml
@@ -18,7 +18,7 @@ on:
       - hotfix/**
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.repository_id }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
