--- a/.github/workflows/python_analysis.yml
+++ b/.github/workflows/python_analysis.yml
@@ -38,7 +38,7 @@ jobs:
       os: '["ubuntu-latest", "windows-latest"]'
       cache-number: 1
       codecov-reference-python-version: '3.10'
-      codecov-reference-os: '["windows-latest"]'
+      codecov-reference-os: '["ubuntu-latest"]'
       timeout-minutes: 40
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
