--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -44,7 +44,7 @@ dependencies:
   - cytoolz=1.0.1=py310ha8f682b_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - debugpy=1.8.12=py310h9e98ed7_0
+  - debugpy=1.8.13=py310h9e98ed7_0
   - decorator=5.2.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - dill=0.3.9=pyhd8ed1ab_1
@@ -83,7 +83,7 @@ dependencies:
   - isoduration=20.11.0=pyhd8ed1ab_1
   - isort=6.0.1=pyhd8ed1ab_0
   - jedi=0.19.2=pyhd8ed1ab_1
-  - jinja2=3.1.5=pyhd8ed1ab_0
+  - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
   - json5=0.10.0=pyhd8ed1ab_1
   - jsonpointer=3.0.0=py310h5588dad_1
@@ -272,9 +272,9 @@ dependencies:
   - unicodedata2=16.0.0=py310ha8f682b_0
   - uri-template=1.3.0=pyhd8ed1ab_1
   - urllib3=2.3.0=pyhd8ed1ab_0
-  - vc=14.3=h5fd82a7_24
-  - vc14_runtime=14.42.34433=h6356254_24
-  - vs2015_runtime=14.42.34433=hfef2bbc_24
+  - vc=14.3=hbf610ac_24
+  - vc14_runtime=14.42.34438=hfd919c2_24
+  - vs2015_runtime=14.42.34438=h7142326_24
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - webcolors=24.11.1=pyhd8ed1ab_0
   - webencodings=0.5.1=pyhd8ed1ab_3
@@ -295,9 +295,9 @@ dependencies:
   - zstd=1.5.7=hbeecb71_1
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6ba24321d5311bbaf7ab460261ce6730ed541131
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@c5f762ae16395629d8a8e4e04dc7488a6c9c53f1
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@57e666e69f78e2961fdb54c715bce14b8d25ce4f
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@275985aa18af76d70d55311e45dcfed149e62089
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@3c479f5d098332ff1c6e0eca0d56be6cc01e0911
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@680a233e2d3380c084a05a6e3cb51b28e6b450ab
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@39de1da1495aff6d16641d408317619e23adbdb4
 
 variables:
