--- a/environments/py-3.11-win-64.conda.lock.yml
+++ b/environments/py-3.11-win-64.conda.lock.yml
@@ -42,7 +42,7 @@ dependencies:
   - importlib-metadata=8.6.1=pyha770c72_0
   - importlib_metadata=8.6.1=hd8ed1ab_0
   - intel-openmp=2024.2.1=h57928b3_1083
-  - jinja2=3.1.5=pyhd8ed1ab_0
+  - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
   - kiwisolver=1.4.7=py311h3257749_0
   - krb5=1.21.3=hdf4eb48_0
@@ -107,7 +107,7 @@ dependencies:
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.1=pyhd8ed1ab_0
   - pysocks=1.7.1=pyh09c184e_7
-  - python=3.11.11=h3f84c4b_1_cpython
+  - python=3.11.11=h3f84c4b_2_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-mumps=0.0.3=py311h5bfbc98_0
   - python-tzdata=2023.4=pyhd8ed1ab_0
@@ -132,9 +132,9 @@ dependencies:
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=16.0.0=py311he736701_0
   - urllib3=2.3.0=pyhd8ed1ab_0
-  - vc=14.3=h5fd82a7_24
-  - vc14_runtime=14.42.34433=h6356254_24
-  - vs2015_runtime=14.42.34433=hfef2bbc_24
+  - vc=14.3=hbf610ac_24
+  - vc14_runtime=14.42.34438=hfd919c2_24
+  - vs2015_runtime=14.42.34438=h7142326_24
   - wheel=0.45.1=pyhd8ed1ab_1
   - win_inet_pton=1.1.0=pyh7428d3b_8
   - wrapt=1.17.2=py311he736701_0
@@ -149,9 +149,9 @@ dependencies:
   - zstd=1.5.7=hbeecb71_1
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6ba24321d5311bbaf7ab460261ce6730ed541131
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@c5f762ae16395629d8a8e4e04dc7488a6c9c53f1
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@57e666e69f78e2961fdb54c715bce14b8d25ce4f
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@275985aa18af76d70d55311e45dcfed149e62089
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@3c479f5d098332ff1c6e0eca0d56be6cc01e0911
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@680a233e2d3380c084a05a6e3cb51b28e6b450ab
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@39de1da1495aff6d16641d408317619e23adbdb4
 
 variables:
