--- a/environments/py-3.12-win-64-dev.conda.lock.yml
+++ b/environments/py-3.12-win-64-dev.conda.lock.yml
@@ -39,12 +39,12 @@ dependencies:
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.1=py312hd5eb7cc_0
   - coverage=7.6.12=py312h31fea79_0
-  - cpython=3.12.9=py312hd8ed1ab_0
+  - cpython=3.12.9=py312hd8ed1ab_1
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py312h4389bb4_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - debugpy=1.8.12=py312h275cf98_0
+  - debugpy=1.8.13=py312h275cf98_0
   - decorator=5.2.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - deprecated=1.2.18=pyhd8ed1ab_0
@@ -78,14 +78,14 @@ dependencies:
   - iniconfig=2.0.0=pyhd8ed1ab_1
   - intel-openmp=2024.2.1=h57928b3_1083
   - ipykernel=6.29.5=pyh4bbf305_0
-  - ipython=9.0.0=pyhca29cf9_0
+  - ipython=9.0.0=pyhca29cf9_1
   - ipython_genutils=0.2.0=pyhd8ed1ab_2
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=7.8.5=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_1
   - isort=6.0.1=pyhd8ed1ab_0
   - jedi=0.19.2=pyhd8ed1ab_1
-  - jinja2=3.1.5=pyhd8ed1ab_0
+  - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
   - json5=0.10.0=pyhd8ed1ab_1
   - jsonpointer=3.0.0=py312h2e8e312_1
@@ -205,7 +205,7 @@ dependencies:
   - pysocks=1.7.1=pyh09c184e_7
   - pytest=8.3.5=pyhd8ed1ab_0
   - pytest-cov=6.0.0=pyhd8ed1ab_1
-  - python=3.12.9=h3f84c4b_0_cpython
+  - python=3.12.9=h3f84c4b_1_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
@@ -275,9 +275,9 @@ dependencies:
   - unicodedata2=16.0.0=py312h4389bb4_0
   - uri-template=1.3.0=pyhd8ed1ab_1
   - urllib3=2.3.0=pyhd8ed1ab_0
-  - vc=14.3=h5fd82a7_24
-  - vc14_runtime=14.42.34433=h6356254_24
-  - vs2015_runtime=14.42.34433=hfef2bbc_24
+  - vc=14.3=hbf610ac_24
+  - vc14_runtime=14.42.34438=hfd919c2_24
+  - vs2015_runtime=14.42.34438=h7142326_24
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - webcolors=24.11.1=pyhd8ed1ab_0
   - webencodings=0.5.1=pyhd8ed1ab_3
@@ -299,9 +299,9 @@ dependencies:
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6ba24321d5311bbaf7ab460261ce6730ed541131
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@c5f762ae16395629d8a8e4e04dc7488a6c9c53f1
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@57e666e69f78e2961fdb54c715bce14b8d25ce4f
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@275985aa18af76d70d55311e45dcfed149e62089
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@3c479f5d098332ff1c6e0eca0d56be6cc01e0911
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@680a233e2d3380c084a05a6e3cb51b28e6b450ab
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@39de1da1495aff6d16641d408317619e23adbdb4
 
 variables:
